# TwitchFollowerList

./: .ai_rules_local.md  .gitignore  CMakeLists.txt  README.md  WIP_STATE.md  build.bat  build.sh  main.cpp  run_tests.bat
Lib/TransCipher/include/: cipher_engine.h  cipher_error.h  cipher_result.h  cipher_step.h  trans_cipher_export.h
api/: file_manager.cpp  file_manager.h  logger.cpp  logger.h  twitch_api_client.cpp  twitch_api_client.h  twitch_authenticator.cpp  twitch_authenticator.h
build_bash_Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_bash_Debug/.qt/: QtDeploySupport.cmake
build_bash_Debug/FollowerList_autogen/: deps
build_bash_Debug/FollowerList_autogen/JH45IGJHDZ/: moc_file_manager.cpp.d  moc_twitch_api_client.cpp.d  moc_twitch_authenticator.cpp  moc_twitch_authenticator.cpp.d
build_bash_Debug/FollowerList_autogen/TAC5DWH4SE/: moc_app_controller.cpp.d
build_bash_Debug/FollowerList_autogen/UYX5XTB5RZ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_bash_Debug/FollowerList_autogen/include/: ui_mainwindow.h
build_bash_Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_bash_Release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_bash_Release/FollowerList_autogen/: deps
build_bash_Release/FollowerList_autogen/JH45IGJHDZ/: moc_file_manager.cpp.d  moc_twitch_api_client.cpp.d  moc_twitch_authenticator.cpp.d
build_bash_Release/FollowerList_autogen/TAC5DWH4SE/: moc_app_controller.cpp.d
build_bash_Release/FollowerList_autogen/UYX5XTB5RZ/: moc_mainwindow.cpp.d
build_cmd/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_cmd/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_cmd/FollowerList_autogen/: deps
build_cmd/FollowerList_autogen/JH45IGJHDZ/: moc_file_manager.cpp  moc_file_manager.cpp.d  moc_twitch_api_client.cpp  moc_twitch_api_client.cpp.d  moc_twitch_authenticator.cpp.d
build_cmd/FollowerList_autogen/TAC5DWH4SE/: moc_app_controller.cpp  moc_app_controller.cpp.d
build_cmd/FollowerList_autogen/UYX5XTB5RZ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build_test/.lupdate/: FollowerList_lupdate_project.cmake
build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_test/.qt/rcc/: FollowerList_translations.qrc  qrc_FollowerList_translations.cpp
build_test/FollowerList_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_test/FollowerList_autogen/JH45IGJHDZ/: moc_file_manager.cpp.d  moc_twitch_api_client.cpp.d  moc_twitch_authenticator.cpp.d
build_test/FollowerList_autogen/TAC5DWH4SE/: moc_app_controller.cpp  moc_app_controller.cpp.d
build_test/FollowerList_autogen/UYX5XTB5RZ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_test/FollowerList_autogen/include/: ui_mainwindow.h
build_test/integration_tests_autogen/: deps  moc_predefs.h
build_test/integration_tests_autogen/JH45IGJHDZ/: moc_file_manager.cpp.d  moc_twitch_api_client.cpp  moc_twitch_api_client.cpp.d  moc_twitch_authenticator.cpp  moc_twitch_authenticator.cpp.d
build_test/integration_tests_autogen/TAC5DWH4SE/: moc_app_controller.cpp.d
build_test/integration_tests_autogen/UYX5XTB5RZ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_test/integration_tests_autogen/include/: test_integration.moc  test_integration.moc.d
build_test/unit_tests_autogen/: deps  mocs_compilation.cpp
build_test/unit_tests_autogen/JH45IGJHDZ/: moc_file_manager.cpp.d
core/: app_controller.cpp  app_controller.h  data_models.h
doc/: basic_design.md  detailed_design.md  gui_spec.md  requirements.md  reusable_assets_analysis.md  test_integration.md  test_system.md  test_unit.md
tests/: test_file_manager.cpp  test_integration.cpp
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
